--- a/기말고사 대체과제.html
+++ b/기말고사 대체과제.html
@@ -70,7 +70,7 @@
 		</header>
 
 		<aside id="sidebar">
-			![프리미어리그_로고2](https://user-images.githubusercontent.com/63350611/85959001-87286c00-b9d4-11ea-8426-d9f69240ed0a.png)"
+			<img width="130px;"src="프리미어리그_로고2.png">
 		</aside>
 
 		<main id="contents">
