--- a/기말고사 대체과제.html
+++ b/기말고사 대체과제.html
@@ -70,7 +70,7 @@
 		</header>
 
 		<aside id="sidebar">
-			<img width="130px;"src="프리미어리그_로고2.png">
+			<img width="130px;"src="./프리미어리그_로고2.png">
 		</aside>
 
 		<main id="contents">
