Update 기말고사 대체과제 리버풀.html

--- a/기말고사 대체과제 리버풀.html
+++ b/기말고사 대체과제 리버풀.html
@@ -329,7 +329,7 @@
 <body>
 	<header id="header">
 
-		<img id="mainlogo" src="리버풀_FC_로고_2.png">
+		<img id="mainlogo" src="./리버풀_FC_로고_2.png">
 
 		<div id="title">
 
