Update 기말고사 대체과제 리버풀.html

--- a/기말고사 대체과제 리버풀.html
+++ b/기말고사 대체과제 리버풀.html
@@ -334,7 +334,7 @@
 		<div id="title">
 
 			리버풀
-			
+			![라힘_스털링](https://user-images.githubusercontent.com/63350611/85958936-711aab80-b9d4-11ea-9a0e-96e54d308147.png)
 			<p id="minititle">
 
 				프리미어리그 1위
