--- a/기말고사 대체과제.html
+++ b/기말고사 대체과제.html
@@ -70,7 +70,7 @@
 		</header>
 
 		<aside id="sidebar">
-			<img width="130px;"src="https://user-images.githubusercontent.com/63350611/85959002-87286c00-b9d4-11ea-8766-ac58b2eae55c.jpg">
+			<img width="130px;"src="https://user-images.githubusercontent.com/63350611/85959001-87286c00-b9d4-11ea-8426-d9f69240ed0a.png
 		</aside>
 
 		<main id="contents">
