Update 기말고사 대체과제 맨체스터 시티.html

--- a/기말고사 대체과제 맨체스터 시티.html
+++ b/기말고사 대체과제 맨체스터 시티.html
@@ -576,7 +576,7 @@
 				골키퍼
 			</div>
 
-			<img class="player11" src="에데르송.png">
+			<img class="player11" src="https://user-images.githubusercontent.com/63350611/85958968-7e379a80-b9d4-11ea-8f04-d032cad13d9f.png">
 
 			<p></p>
 
