Update 기말고사 대체과제 레스터 시티.html

--- a/기말고사 대체과제 레스터 시티.html
+++ b/기말고사 대체과제 레스터 시티.html
@@ -369,7 +369,7 @@
 			# 감독
 		</div></div></a>
 
-			<img id="epllogo" src="프리미어리그_형광1.jpg">
+			<img id="epllogo" src="https://user-images.githubusercontent.com/63350611/85959002-87286c00-b9d4-11ea-8766-ac58b2eae55c.jpg">
 
 			<img id="managerpicture" src="https://user-images.githubusercontent.com/63350611/85958958-7b3caa00-b9d4-11ea-8ef3-fc7fb93989cc.png">
 
