--- a/기말고사 대체과제.html
+++ b/기말고사 대체과제.html
@@ -58,9 +58,9 @@
 <body>
 	<div id="title">EPL 재개 전 BIG 4 되짚어보기</div>
 
-    <div id="box">
+    	<div id="box">
+		
         <header id="header">
-
 			<ul id="mainmenu">
 				<li><a href="https://zxgds123.github.io/exam/%EA%B8%B0%EB%A7%90%EA%B3%A0%EC%82%AC%20%EB%8C%80%EC%B2%B4%EA%B3%BC%EC%A0%9C%20%EB%A6%AC%EB%B2%84%ED%92%80.html" target="_blank">리버풀</li></a>
 				<li><a href="https://zxgds123.github.io/exam/%EA%B8%B0%EB%A7%90%EA%B3%A0%EC%82%AC%20%EB%8C%80%EC%B2%B4%EA%B3%BC%EC%A0%9C%20%EB%A7%A8%EC%B2%B4%EC%8A%A4%ED%84%B0%20%EC%8B%9C%ED%8B%B0.html" target="_blank">맨체스터 시티</li></a>
@@ -70,7 +70,7 @@
 		</header>
 
 		<aside id="sidebar">
-			<img width="130px;"src="https://user-images.githubusercontent.com/63350611/85959001-87286c00-b9d4-11ea-8426-d9f69240ed0a.png>
+			<img width="130px;"src="https://user-images.githubusercontent.com/63350611/85959001-87286c00-b9d4-11ea-8426-d9f69240ed0a.png">
 		</aside>
 
 		<main id="contents">
