--- a/기말고사 대체과제.html
+++ b/기말고사 대체과제.html
@@ -74,23 +74,19 @@
 		</aside>
 
 		<main id="contents">
-			<h2>Epl 무기한 연기</h2>
+			
+		<h2>Epl 무기한 연기</h2>
 
-            <p> Premier League를 포함한 많은 유럽 축구리그가 코로나 바이러스 
-			사태로 일시정지 되었었다. Epl은 시즌이 취소될지, 무기한 연기가 될지 회의를 통해 결정하기로 했다.
-			만약 취소가 된다면 Epl은 7억 6200만 파운드 (약 1조 1700억원)에 달하는 중계권료를 배상해줘야 한다.
-			이는 중계권이 큰 부분을 차지하는 Epl에게는 큰 타격이다.
-			</p>
+            	<p> Premier League를 포함한 많은 유럽 축구리그가 코로나 바이러스 사태로 일시정지 되었었다. Epl은 시즌이 취소될지, 무기한 연기가 될지 회의를 통해 결정하기로 했다.
+		만약 취소가 된다면 Epl은 7억 6200만 파운드 (약 1조 1700억원)에 달하는 중계권료를 배상해줘야 한다. 이는 중계권이 큰 부분을 차지하는 Epl에게는 큰 타격이다.
+		</p>
 
-			<h2>Epl 재개</h2>
+		<h2>Epl 재개</h2>
 
-            <p>결국 회의를 통해 Epl 사무국은 6월 17일부터 재개일을 확정지었다. 재개 일정은 7월 30일까지 남은 경기를 
-				모두 끝낼거라는 입장이다. 재개 첫 날 경기는 아스날과 맨체스터 시티, 셰필드 유나이티드와 아스톤 빌라의 경기로 
-				시작될 예정이며 사실상 매일 리그가 진행되며, 매일 경기가 있을 예정이다. 코로나 바이러스로 인하여 
-				부상자가 돌아온 팀, 좋은 흐름이 끊긴 팀 등등 많은 다사다난 했던 휴식기였다.
-				재개일이 확정된 만큼 BIG4 팀들은 과연 중단 전에는 어땠는지 되짚어 보는 시간을 갖도록 해보자.
-		
-			</p>
+            	<p>결국 회의를 통해 Epl 사무국은 6월 17일부터 재개일을 확정지었다. 재개 일정은 7월 30일까지 남은 경기를 모두 끝낼거라는 입장이다. 재개 첫 날 경기는 아스날과 맨체스터 시티, 셰필드 유나이티드와 아스톤 빌라의 경기로 시작될 예정이며 사실상 매일 리그가 진행되며, 매일 경기가 있을 예정이다. 코로나 바이러스로 인하여 
+				부상자가 돌아온 팀, 좋은 흐름이 끊긴 팀 등등 많은 다사다난 했던 휴식기였다. 재개일이 확정된 만큼 BIG4 팀들은 과연 중단 전에는 어땠는지 되짚어 보는 시간을 갖도록 해보자.
+		</p>
+			
 		</main>
 		<footer>
 
