--- a/homepage.html
+++ b/homepage.html
@@ -62,10 +62,10 @@
 		
         <header id="header">
 			<ul id="mainmenu">
-				<li><a href="https://zxgds123.github.io/exam/%EA%B8%B0%EB%A7%90%EA%B3%A0%EC%82%AC%20%EB%8C%80%EC%B2%B4%EA%B3%BC%EC%A0%9C%20%EB%A6%AC%EB%B2%84%ED%92%80.html" target="_blank">리버풀</li></a>
-				<li><a href="https://zxgds123.github.io/exam/%EA%B8%B0%EB%A7%90%EA%B3%A0%EC%82%AC%20%EB%8C%80%EC%B2%B4%EA%B3%BC%EC%A0%9C%20%EB%A7%A8%EC%B2%B4%EC%8A%A4%ED%84%B0%20%EC%8B%9C%ED%8B%B0.html" target="_blank">맨체스터 시티</li></a>
-				<li><a href="https://zxgds123.github.io/exam/%EA%B8%B0%EB%A7%90%EA%B3%A0%EC%82%AC%20%EB%8C%80%EC%B2%B4%EA%B3%BC%EC%A0%9C%20%EB%A0%88%EC%8A%A4%ED%84%B0%20%EC%8B%9C%ED%8B%B0.html" target="_blank">레스터 시티</li></a>
-				<li><a href="https://zxgds123.github.io/exam/%EA%B8%B0%EB%A7%90%EA%B3%A0%EC%82%AC%20%EB%8C%80%EC%B2%B4%EA%B3%BC%EC%A0%9C%20%EC%B2%BC%EC%8B%9C.html" target="_blank">첼시</li></a>
+				<li><a href="https://zxgds123.github.io/exam/liverpool.html" target="_blank">리버풀</li></a>
+				<li><a href="https://zxgds123.github.io/exam/manchestercity.html" target="_blank">맨체스터 시티</li></a>
+				<li><a href="https://zxgds123.github.io/exam/leicestercity.html" target="_blank">레스터 시티</li></a>
+				<li><a href="https://zxgds123.github.io/exam/chelsea.html" target="_blank">첼시</li></a>
 			</ul>
 		</header>
 
